<resources>
    <string name="app_name">shop</string>
    <string name="activity_main_search_hint">搜索商品</string>
    <string name="activity_main_tab_home">首页</string>
    <string name="activity_main_tab_category">商品</string>
    <string name="activity_main_tab_shop">购物车</string>
    <string name="activity_main_tab_mine">我的</string>

    <!-- Mine Fragment -->
    <string name="fragment_mine_login">点击头像登陆</string>
    <string name="fragment_mine_info">查看或编辑个人资料</string>
    <string name="fragment_mine_follow">我的关注</string>
    <string name="fragment_mine_order">我的订单</string>
    <string name="fragment_mine_address">收货地址</string>
    <string name="fragment_mine_updating">检查更新</string>
    <string name="fragment_mine_feedback">意见反馈</string>
    <string name="fragment_mine_push">推送设置</string>
    <string name="fragment_mine_about_us">关于我们</string>

    <!--address相关-->
    <string name="activity_address_title">收货地址</string>
    <string name="address_name">收货人:</string>
    <string name="address_phone">手机号码:</string>
    <string name="address_location">所在地区:</string>
    <string name="address_address">详细地址:</string>
    <string name="address_save"> 保存收货地址 </string>
    <string name="address_set">设为默认</string>
    <string name="address_delete">删除</string>
    <string name="address_edit">编辑</string>
    <string name="activity_add_address_add">添加地址</string>
    <string name="activity_add_address_modify">修改地址</string>
    <string name="saving">保存中…</string>

    <!-- login & register -->
    <string name="prompt_user_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">再次输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_user_name">用户名至少8位</string>
    <string name="error_invalid_old_password">原密码太短</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_password_not_same">两次输入密码不相同</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="error_user_already_exists">用户名已存在</string>
    <string name="error_user_not_exists">该用户不存在</string>
    <string name="error_network">网络错误</string>
    <string name="login_success">登陆成功</string>
    <string name="action_register">创建新账号</string>
    <string name="action_register_short">注册</string>
    <string name="login_no_account_yet">还没有账号？创建一个</string>
    <string name="login_already_a_member">已经注册？登陆 </string>
    <string name="reset_password">忘记密码?</string>

    <!-- profile 相关 -->
    <string name="profile">个人信息</string>
    <string name="head_icon">头像</string>
    <string name="username">昵称</string>
    <string name="password">密码</string>
    <string name="change">修改</string>
    <string name="mobile_num">手机</string>
    <string name="mobile_bind">手机号绑定</string>
    <string name="bind">绑定</string>
    <string name="email">邮箱</string>
    <string name="email_bind">邮箱绑定</string>
    <string name="email_text">请填写邮箱地址</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="retype_new_password">再输入</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="change_password_failed">修改密码失败</string>
    <string name="phone_86">+86</string>
    <string name="phone">请填写手机号码</string>
    <string name="ping_code">请输入验证码</string>
    <string name="pin_code">验证码</string>
    <string name="logout">退出登陆</string>
    <string name="logout_success">登出成功</string>
    <string name="logout_failed">登出成功</string>
    <string name="confirm">确定</string>
    <string name="next_step">下一步</string>
    <string name="not_verified">未验证</string>
    <string name="send_pincode_success">发送验证码成功</string>
    <string name="send_pincode_fail">发送验证码失败</string>
    <string name="confirm_success">修改成功</string>
    <string name="confirm_fail">修改失败</string>

    <!-- 拍照上传部分 -->
    <string name="dialog_photo_take_pic">拍照</string>
    <string name="dialog_photo_pick_pic">从手机相册选择</string>
    <string name="dialog_cancel">取消</string>

    <!-- item -->
    <string name="item_list_title">商品列表</string>
    <string name="item_bottom">%1$d条评论, %2$d%%好评</string>
    <string name="item_price">￥%1$.2f</string>
    <string name="item_list_empty">没有商品</string>

    <!--shopping cart-->
    <string name="total_price">合计:￥ %1$.2f</string>
    <string name="checkout">去结算(%1$d)</string>
    <string name="shopping_cart_empty">购物车是空的！</string>
    <string name="confirm_remove">你确认要移除该商品吗？</string>
    <string name="wrong_click">按错了</string>
    <string name="select_all">全选</string>
    <string name="login_first">请先登录</string>>
    <string name="no_select_item">没有选择物品</string>

    <!--order confirm-->
    <string name="activity_confirm_title">确认订单</string>
    <string name="item_num">x%1$d</string>
    <string name="submit_order">提交订单</string>
    <string name="submitting_order">提交订单中</string>
    <string name="submit_order_fail">提交订单失败</string>
    <string name="order_confirm_input_address">请填写地址</string>
    <string name="order_confirm_pay">货到付款</string>
    <string name="order_confirm_pay_online">在线支付</string>
    <string name="order_confirm_remarks">备注</string>
    <string name="order_confirm_remarks_hint">点击添加备注</string>
    <string name="order_confirm_receipt">发票信息</string>
    <string name="order_confirm_receipt_hint">不需要发票</string>
    <string name="order_no">订单号:</string>
    <string name="order_time">下单时间:%1$s</string>
    <string name="select_address">请选择地址</string>
    <string name="order_detail">订单详情</string>
    <string name="to_pay">去支付</string>
    <string name="address_name_text">收货人:%1$s</string>
    <string name="address_address_text">收货地址:%1$s</string>
    <string name="pay_type">付款方式:%1$s</string>
    <string name="order_remark">备注:%1$s</string>
    <string name="order_state_0">未知状态</string>
    <string name="order_state_1">取消订单</string>
    <string name="order_state_2">准备发货</string>
    <string name="order_state_3">订单已取消</string>
    <string name="order_paying">支付中</string>
    <string name="order_pay_fail">支付失败</string>
    <string name="order_empty">没有订单！</string>

    <!-- Search Activity -->
    <string name="activity_search_history">历史搜索词</string>
    <string name="activity_search_clear">清除</string>
    <string name="activity_search_empty">没有搜索到</string>
    <string name="scan">二维码</string>
    <string name="activity_search_search">搜索</string>
    <string name="pay_success">支付成功</string>
    <string name="name_not_empty">收件人不能为空</string>
    <string name="name_too_long">收件人姓名过长</string>
    <string name="phone_not_empty">手机号码不能为空</string>
    <string name="phone_invalid">手机号码非法</string>
    <string name="location_not_empty">所在地区不能为空</string>
    <string name="address_not_empty">详细地址不能为空</string>
    <string name="add_cart_success">添加成功</string>
    <string name="get_photo_failed">获取图片失败</string>
    <string name="upload_failed">上传失败</string>
    <string name="upload_success">上传成功</string>
    <string name="get_no_info">没有查询到信息</string>
    <string name="open_camera_failed">打开相机出错</string>
    <string name="search_content_not_empty">搜索内容不能为空</string>
    <string name="pin_code_length_incorrect">验证码长度不正确</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_failed">绑定失败</string>
    <string name="bind_too_frequently">绑定操作过于频繁，请稍后再试</string>
    <string name="get_pin_code_again">重新获取验证码</string>
    <string name="get_pin_code_success">获取验证码成功</string>
    <string name="get_pin_code_failed">获取验证码失败</string>
    <string name="verifying">验证中</string>
    <string name="email_had_verified">该邮箱已验证</string>
    <string name="verify_failed">失败</string>
    <string name="input_correct_email">请输入正确的邮箱</string>
    <string name="input_correct_phone">请输入正确的手机号码</string>
    <string name="phone_had_verified">该手机号已验证</string>
    <string name="changing">修改中…</string>
    <string name="no_address">还没有地址</string>

</resources>
